  * Split rdoc/markup/inline into individual files for its component classes.
  * Moved token stream HTML markup out of RDoc::AnyMethod#markup_code into
    RDoc::TokenStream::to_html
  * "Top" link in section headers is no longer inside the heading element.
  * RDoc avoids printing some warnings unless run with `rdoc --verbose`.  For
    Rails issue #1646.

* Bug fixes
  * Markup defined by RDoc::Markup#add_special inside a <tt><tt></tt> is no
    longer converted.
  * Performance of RDoc::RubyLex has been improved.  Ruby Bug #5202 by Ryan
    Melton.
  * Add US-ASCII magic comments to work with <tt>ruby -Ku</tt>.  Issue #63 by
    Travis D. Warlick, Jr.
  * Clicking a link in the method description now works.  Issue #61 by Alan
    Hogan.
  * Fixed RDoc::Markup::Parser for CRLF line endings.  Issue #67 by Marvin
    Gülker.
  * Fixed lexing of percent strings like %r{#}.  Issue #68 by eclectic923.
  * The C parser now understands classes defined with
    +rb_struct_define_without_accessor+ (like Range).  Pull Request #73 by Dan
    Bernier
  * Fixed lexing of <code>a b <<-HEREDOC</code>.  Issue #75 by John Mair.
  * Added LEGAL.rdoc with references to licenses in other files.  Issue #78 by
    Dmitry Jemerov.
  * Block parameters are displayed in Darkfish output again.  Issue #76 by
    Andrea Singh.
  * The method parameter coverage report no longer includes parameter default
    values.  Issue #77 by Jake Goulding.
  * The module for an include is not looked up until parsed all the files are
    parsed.  Unless your project includes nonexistent modules this avoids
    worst-case behavior (<tt>O(n!)</tt>) of RDoc::Include#module.

=== 3.9.2 / 2011-08-11

* Bug fix
  * Loosened TIDYLINK regexp to allow any content in the link section like:
    <tt>{foo}[rdoc-ref:SomeClass]</tt>
  * In HTML output headings are capped at <tt><h6></tt> again

=== 3.9.1 / 2011-07-31

* Bug fixes
  * Fix RDoc::Markup parser for a header followed by a non-text token.  Issue